dark mode fix

--- a/css/gui/gui.menu.css
+++ b/css/gui/gui.menu.css
@@ -49,6 +49,7 @@
   /*  max-height : 160px; */
     overflow   : auto;
     box-shadow : 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border     : 1px solid darkgray;
     z-index    : 100;
 }
 
